--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "vite": "^2.6.4"
   },
   "dependencies": {
+    "@types/jest": "^27.0.3",
     "@types/three": "^0.133.1",
-    "three": "^0.133.1"
+    "jest": "^27.3.1",
+    "three": "^0.133.1",
+    "ts-jest": "^27.0.7"
   }
 }
